# vehicle_scheduling_system

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_battery_events.py
app/: config.py  database.py  errors.py  main.py  topology.py
app/graphql/: __init__.py  loaders.py  resolvers.py  router.py  types.py
app/logic/: battery.py  conflict_detector.py  path_validator.py  positions.py  schedule_generator.py  snapshots.py
app/models/: __init__.py  battery_event.py  block_config.py  service.py  vehicle.py
app/routers/: blocks.py  schedule.py  services.py  topology.py  vehicles.py
app/schemas/: block_config.py  service.py  topology.py  vehicle.py
tests/: conftest.py  test_conflict_detector.py  test_graphql_api.py  test_path_validator.py  test_schedule_generator.py  test_services_api.py  test_topology_api.py
